<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/registerAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/registerAvatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/avatar" />

    <EditText
        android:id="@+id/registerBirthdayInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="01-01-1990"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/registerUsernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="abc"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUsername"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerPassword"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <TextView
        android:id="@+id/registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerEmail"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/registerBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerBirthday"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <EditText
        android:id="@+id/registerEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="abc@email.com"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/registerGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerGenre"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="1234"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <CheckBox
        android:id="@+id/registerAdventureCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerAdventureCB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <CheckBox
        android:id="@+id/registerCrimeCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerCrimeCB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerRomanceCB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <CheckBox
        android:id="@+id/registerHorrorCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerHorrorCB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <CheckBox
        android:id="@+id/registerMysteryCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerMysteryCB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerAdventureCB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <CheckBox
        android:id="@+id/registerRomanceCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerRomanceCB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <CheckBox
        android:id="@+id/registerSciFiCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerSciFiCB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerHorrorCB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/registerRegisterBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:text="@string/registerRegisterBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/registerRegisterBtn2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:text="@string/registerCancelBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerRegisterBtn2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/registerRegisterBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerRomanceCB"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>